# PoCmon

./: CMakeLists.txt  combat.h  main.c
PoCmon Combat/: combat.c  sac.c  sac.h
PoCmon Combat/Pokemon/: Pokemon.c  Pokemon.h
PoCmon Combat/Tours/: Tours.c  Tours.h
